--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 223,
       "metadata": {
         "id": "xw3Ii1NmJQsX"
       },
@@ -27,6 +27,7 @@
         "from sklearn.impute import KNNImputer\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from category_encoders import BinaryEncoder\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "\n",
         "%matplotlib inline"
       ]
@@ -6018,7 +6019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 234,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -6029,7 +6030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 235,
       "metadata": {},
       "outputs": [
         {
@@ -6415,7 +6416,7 @@
               "[29454 rows x 28 columns]"
             ]
           },
-          "execution_count": 217,
+          "execution_count": 235,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -6433,7 +6434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 218,
+      "execution_count": 236,
       "metadata": {},
       "outputs": [
         {
@@ -6450,7 +6451,7 @@
               " 'city_neighborhood']"
             ]
           },
-          "execution_count": 218,
+          "execution_count": 236,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -6462,7 +6463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": 237,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -6480,20 +6481,20 @@
         "        test_data[c] = le.transform(test_data[c])\n",
         "    else:\n",
         "        temp_train = enc.fit_transform(train_data[c])\n",
-        "        temp_valid = enc.transform(X_valid[c])\n",
-        "        temp_test = enc.transform(X_test[c])\n",
+        "        temp_valid = enc.transform(valid_data[c])\n",
+        "        temp_test = enc.transform(test_data[c])\n",
         "        train_data = pd.concat([train_data, temp_train], axis=1)\n",
-        "        X_valid = pd.concat([X_valid, temp_valid], axis=1)\n",
-        "        X_test = pd.concat([X_test, temp_test], axis=1)\n",
+        "        valid_data = pd.concat([valid_data, temp_valid], axis=1)\n",
+        "        test_data = pd.concat([test_data, temp_test], axis=1)\n",
         "\n",
         "        train_data = train_data.drop(c, axis=1)\n",
-        "        X_valid = X_valid.drop(c, axis=1)\n",
-        "        X_test = X_test.drop(c, axis=1)"
+        "        valid_data = valid_data.drop(c, axis=1)\n",
+        "        test_data = test_data.drop(c, axis=1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": 238,
       "metadata": {},
       "outputs": [
         {
@@ -6556,7 +6557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 221,
+      "execution_count": 239,
       "metadata": {},
       "outputs": [
         {
@@ -6565,13 +6566,13 @@
               "[]"
             ]
           },
-          "execution_count": 221,
+          "execution_count": 239,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "train_data.select_dtypes(include=['object']).columns.tolist()"
+        "valid_data.select_dtypes(include=['object']).columns.tolist()"
       ]
     },
     {
@@ -6583,7 +6584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 222,
+      "execution_count": 240,
       "metadata": {},
       "outputs": [
         {
@@ -6609,6 +6610,26 @@
       "metadata": {},
       "source": [
         "# Scaling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 241,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sc = StandardScaler()\n",
+        "\n",
+        "train_data1 = pd.DataFrame(sc.fit_transform(train_data), columns=train_data.columns)\n",
+        "valid_data1 = pd.DataFrame(sc.transform(valid_data[train_data.columns]), columns=train_data.columns)\n",
+        "test_data1 = pd.DataFrame(sc.transform(test_data[train_data.columns]), columns=train_data.columns)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Modeling"
       ]
     },
     {
