--- a/Hypothesis Test.ipynb
+++ b/Hypothesis Test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNIZxeDZUOkBIEOWoBr0oHq",
+      "authorship_tag": "ABX9TyPt/m1FArrehYmWCHM0Vv7W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Load Data**"
+      ],
+      "metadata": {
+        "id": "VZOn5X2Uvbqz"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 24,
       "metadata": {
         "id": "Hal5vI40WYF7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "de713ead-5275-43f6-b162-87e798867999"
+        "outputId": "4dfd93e9-7845-4c4a-eefa-3c60be68217a"
       },
       "outputs": [
         {
@@ -44,9 +53,9 @@
           "text": [
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1fYGb-n114IGWZDcBKE0jzc3BWSLCcsVQ\n",
-            "From (redirected): https://drive.google.com/uc?id=1fYGb-n114IGWZDcBKE0jzc3BWSLCcsVQ&confirm=t&uuid=7d8c3647-2ad6-4ad7-8872-cf3ca4ee2350\n",
+            "From (redirected): https://drive.google.com/uc?id=1fYGb-n114IGWZDcBKE0jzc3BWSLCcsVQ&confirm=t&uuid=cf88af1f-026c-442f-8c40-849ed6e523fa\n",
             "To: /content/Divar.csv\n",
-            "100%|██████████| 794M/794M [00:03<00:00, 216MB/s]\n",
+            "100%|██████████| 794M/794M [00:13<00:00, 60.4MB/s]\n",
             "/tmp/ipython-input-1679883135.py:11: DtypeWarning: Columns (11,27,29,53) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv(output)\n"
           ]
@@ -147,9 +156,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
-        "outputId": "25d9fa7f-8af0-4d66-e45f-059f5947bda6"
+        "outputId": "5f40c62c-3db7-4c8e-b367-2a3fd8f23424"
       },
-      "execution_count": 6,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +181,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b46ec15d-9921-4340-a50e-42c55a34f660\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ed5f2611-823c-4134-8d8d-3d6f01cbd9bb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -258,7 +267,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b46ec15d-9921-4340-a50e-42c55a34f660')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed5f2611-823c-4134-8d8d-3d6f01cbd9bb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -310,12 +319,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b46ec15d-9921-4340-a50e-42c55a34f660 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ed5f2611-823c-4134-8d8d-3d6f01cbd9bb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b46ec15d-9921-4340-a50e-42c55a34f660');\n",
+              "        const element = document.querySelector('#df-ed5f2611-823c-4134-8d8d-3d6f01cbd9bb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -335,8 +344,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-def1ab39-fa07-4951-af8f-4536634fca19\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-def1ab39-fa07-4951-af8f-4536634fca19')\"\n",
+              "    <div id=\"df-f8f09c60-c8dc-437a-a44c-9088383aea11\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f8f09c60-c8dc-437a-a44c-9088383aea11')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -455,7 +464,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-def1ab39-fa07-4951-af8f-4536634fca19 button');\n",
+              "            document.querySelector('#df-f8f09c60-c8dc-437a-a44c-9088383aea11 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -471,7 +480,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 25
         }
       ]
     },
@@ -485,23 +494,32 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "wY5CM1PbwhJq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from scipy import stats\n",
         "\n",
+        "# ادغام کردن دیتا برای فهمیدن دسته بندی هر شهر به کلان شهر یا شهر کوچک\n",
         "df_city = df_cities.rename(columns={\"نام شهر\": \"city_slug\", \"دسته‌بندی\": \"city_type\"})\n",
         "df_one = pd.merge(df, df_city, on=\"city_slug\", how=\"inner\").copy()\n",
         "\n",
         "df_one = df_one[df_one[\"cat2_slug\"].isin([\"residential-sell\", \"residential-rent\"])]\n",
         "\n",
-        "\n",
+        "#حذف مقادیر گم شده در مساحت خانه\n",
         "df_one = df_one.dropna(subset=[\"building_size\"])\n",
         "\n",
         "megacities = df_one[df_one[\"city_type\"] == \"کلان‌شهر\"][\"building_size\"]\n",
         "small_cities = df_one[df_one[\"city_type\"] == \"شهر کوچک\"][\"building_size\"]\n",
         "\n",
         "\n",
-        "\n",
+        "#انجام آزمون نرمال بودن توزیع به جهت اینکه ببینیم از چه آزمون فرضی استفاده کنیم\n",
+        "#میبینیم اگر دیتا خیلی زیاد بود فقط 5000 عدد از داده رو برمیداریم\n",
         "p1 = stats.shapiro(megacities.sample(min(5000, len(megacities))))[1]\n",
         "p2 = stats.shapiro(small_cities.sample(min(5000, len(small_cities))))[1]\n",
         "print( p1)\n",
@@ -534,16 +552,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uQ1ygwcuse9n",
-        "outputId": "bf98e465-34cf-4b86-ca2e-a06b638fb3b7"
+        "outputId": "0e1f6466-f6d1-45dd-98df-15d674dbf271"
       },
-      "execution_count": 16,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.0406404834516925e-95\n",
-            "1.645184451194356e-95\n",
+            "1.4335479752759908e-95\n",
+            "2.567832208707325e-95\n",
             "\n",
             "آزمون مورد استفاده: Mann–Whitney U\n",
             "آماره آزمون: 70410392554.0000\n",
@@ -571,9 +589,11 @@
         "df2 = df_final.copy()\n",
         "\n",
         "\n",
-        "\n",
+        "#عبارت \"قبل از ۱۳۷۰\" به سال ۱۳۶۹ تبدیل شده تا بتوان مقایسه عددی انجام داد.\n",
         "df2.loc[df2.construction_year=='قبل از ۱۳۷۰', 'construction_year'] = 1369\n",
+        "#تغییر مقادیر به فلوت\n",
         "df2.construction_year = df2.construction_year.astype('float')\n",
+        "#حذف ردیف مقادیر گمشده\n",
         "df2=df2.dropna(subset=[\"building_size\",\"construction_year\"])\n",
         "\n",
         "\n",
@@ -584,9 +604,9 @@
         "\n",
         "\n",
         "\n",
-        "sample_size = 500 if len(old_houses) > 500 else len(old_houses)\n",
+        "sample_size = 5000 if len(old_houses) > 5000 else len(old_houses)\n",
         "shapiro_old = shapiro(old_houses.sample(sample_size, random_state=1))\n",
-        "sample_size = 500 if len(new_houses) > 500 else len(new_houses)\n",
+        "sample_size = 5000 if len(new_houses) > 5000 else len(new_houses)\n",
         "shapiro_new = shapiro(new_houses.sample(sample_size, random_state=1))\n",
         "\n",
         "print(\"Shapiro-Wilk Old Houses:\", shapiro_old)\n",
@@ -597,7 +617,7 @@
         "print(\"Levene Test:\", levene_test)\n",
         "\n",
         "alpha = 0.05\n",
-        "\n",
+        "#انجام آزمون بر اساس تست هایی که انجام دادیم\n",
         "if shapiro_old.pvalue >= alpha and shapiro_new.pvalue >= alpha and levene_test.pvalue >= alpha:\n",
         "    t_stat, p_val = ttest_ind(old_houses, new_houses, alternative='greater')\n",
         "    test_name = \"Independent Samples t-test (one-sided: old > new)\"\n",
@@ -612,29 +632,29 @@
         "if p_val < alpha:\n",
         "    print(\" نتیجه: خانه‌های قدیمی به طور معناداری مساحت بیشتری دارند\")\n",
         "else:\n",
-        "    print(\" شواهد کافی برای تفاوت معنادار پیدا\")"
+        "    print(\" شواهد کافی برای تفاوت معنادار پیدا نشد\")"
       ],
       "metadata": {
         "id": "hfWTzp0m_Yck",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e947a461-9453-492c-873d-e018ffb80457"
+        "outputId": "3728fff8-4eef-4560-b534-278fb9334dd8"
       },
-      "execution_count": 17,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Shapiro-Wilk Old Houses: ShapiroResult(statistic=np.float64(0.031563523924772685), pvalue=np.float64(2.787880671422797e-44))\n",
-            "Shapiro-Wilk New Houses: ShapiroResult(statistic=np.float64(0.03783554322246663), pvalue=np.float64(3.467792242585888e-44))\n",
+            "Shapiro-Wilk Old Houses: ShapiroResult(statistic=np.float64(0.007572024033949631), pvalue=np.float64(1.1320100460106781e-95))\n",
+            "Shapiro-Wilk New Houses: ShapiroResult(statistic=np.float64(0.014094434858509364), pvalue=np.float64(1.6212064518214097e-95))\n",
             "Levene Test: LeveneResult(statistic=np.float64(3.87662843404578), pvalue=np.float64(0.04896312769920616))\n",
             "\n",
             "Selected Test: Mann–Whitney U Test (one-sided: old > new)\n",
             "Test Statistic: 64810415402.5000\n",
             "P-Value: 1\n",
-            " شواهد کافی برای تفاوت معنادار پیدا\n"
+            " شواهد کافی برای تفاوت معنادار پیدا نشد\n"
           ]
         }
       ]
@@ -653,24 +673,24 @@
       "source": [
         "df3 = df_final.copy()\n",
         "df3 = df_final[df_final[\"cat2_slug\"] == \"commercial-sell\"]\n",
-        "\n",
+        "#حذف ردیف مقادیر گمشده در ستون های مورد نیاز\n",
         "df3 = df.dropna(subset=[\"has_business_deed\", \"price_value\"])\n",
-        "\n",
+        "#تفکیک داده ها بر اساس فرض\n",
         "with_deed = df3[df3[\"has_business_deed\"] == True][\"price_value\"]\n",
         "without_deed = df3[df3[\"has_business_deed\"] == False][\"price_value\"]\n",
-        "\n",
-        "sample_size = min(500, len(with_deed))\n",
+        "#تست توزیع نرمال\n",
+        "sample_size = min(5000, len(with_deed))\n",
         "shapiro_with = shapiro(with_deed.sample(sample_size, random_state=1))\n",
         "\n",
-        "sample_size = min(500, len(without_deed))\n",
+        "sample_size = min(5000, len(without_deed))\n",
         "shapiro_without = shapiro(without_deed.sample(sample_size, random_state=1))\n",
         "\n",
         "print(\"Shapiro Test (With Deed):\", shapiro_with)\n",
         "print(\"Shapiro Test (Without Deed):\", shapiro_without)\n",
-        "\n",
+        "#تست واریانش\n",
         "levene_test = levene(with_deed, without_deed)\n",
         "print(\"Levene Test:\", levene_test)\n",
-        "\n",
+        "#انتخاب ازمون فرض بر اساس تست ها\n",
         "alpha = 0.05\n",
         "if (shapiro_with.pvalue >= alpha) and (shapiro_without.pvalue >= alpha) and (levene_test.pvalue >= alpha):\n",
         "    stat, p_value = ttest_ind(with_deed, without_deed, alternative=\"two-sided\")\n",
@@ -693,16 +713,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7HWF1TEhR8au",
-        "outputId": "13090e99-616c-41ac-fa18-18ffb93f7207"
+        "outputId": "7327672d-777e-4828-ad8b-8a2280a7756d"
       },
-      "execution_count": 18,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Shapiro Test (With Deed): ShapiroResult(statistic=np.float64(0.0355186132617441), pvalue=np.float64(3.1987593929591484e-44))\n",
-            "Shapiro Test (Without Deed): ShapiroResult(statistic=np.float64(0.2701521780723718), pvalue=np.float64(2.9756590594763085e-40))\n",
+            "Shapiro Test (With Deed): ShapiroResult(statistic=np.float64(0.0208015803204028), pvalue=np.float64(2.3506486442099992e-95))\n",
+            "Shapiro Test (Without Deed): ShapiroResult(statistic=np.float64(0.025812807086604495), pvalue=np.float64(3.107212764858161e-95))\n",
             "Levene Test: LeveneResult(statistic=np.float64(0.01023547521276335), pvalue=np.float64(0.9194158035161516))\n",
             "\n",
             "Selected Test: Mann–Whitney U Test (two-sided)\n",
@@ -731,7 +751,8 @@
         "df4 = df_final.copy()\n",
         "\n",
         "df4 = df4[df4[\"cat2_slug\"] == \"residential-sell\"]\n",
-        "\n",
+        "#اضافه کردن یک ستون که ببینیم یک خاه لاکچری هست یا نه\n",
+        "#درصورتی که اصلا حتی یکی ازین ویژگی هارا نداشته باشد و سایر ویژگی ها مشخص نباشد و داده گمشده باشد آنرا اصلا داخل تست و آزمون فرض نمیاریم، چون ممکن هست اون داده ای که نیستش درست باشه و خانه جزو لاکچری به حساب بیاد\n",
         "luxury_features = [\"has_pool\", \"has_sauna\", \"has_jacuzzi\", \"has_barbecue\"]\n",
         "has_true = df4[luxury_features].eq(True).any(axis=1)\n",
         "\n",
@@ -739,6 +760,7 @@
         "df4[\"is_luxury\"] = pd.NA\n",
         "df4.loc[has_true, \"is_luxury\"] = True\n",
         "df4.loc[all_false, \"is_luxury\"] = False\n",
+        "#حذف داده های ناموجود\n",
         "df4 = df4.dropna(subset=[\"price_value\"])\n",
         "\n",
         "\n",
@@ -746,19 +768,19 @@
         "\n",
         "luxury_prices = df4[df4[\"is_luxury\"] == True][\"price_value\"]\n",
         "non_luxury_prices = df4[df4[\"is_luxury\"] == False][\"price_value\"]\n",
-        "\n",
-        "sample_size = min(500, len(luxury_prices))\n",
+        "#تست توزیع نرمال\n",
+        "sample_size = min(5000, len(luxury_prices))\n",
         "shapiro_lux = shapiro(luxury_prices.sample(sample_size, random_state=1))\n",
         "\n",
-        "sample_size = min(500, len(non_luxury_prices))\n",
+        "sample_size = min(5000, len(non_luxury_prices))\n",
         "shapiro_nonlux = shapiro(non_luxury_prices.sample(sample_size, random_state=1))\n",
         "\n",
         "print(\"Shapiro Test (Luxury):\", shapiro_lux)\n",
         "print(\"Shapiro Test (Non-Luxury):\", shapiro_nonlux)\n",
-        "\n",
+        "#تست واریانس\n",
         "levene_test = levene(luxury_prices, non_luxury_prices)\n",
         "print(\"Levene Test:\", levene_test)\n",
-        "\n",
+        "#انتخاب ازمون فرض بر اساس تست ها\n",
         "alpha = 0.05\n",
         "if (shapiro_lux.pvalue >= alpha) and (shapiro_nonlux.pvalue >= alpha) and (levene_test.pvalue >= alpha):\n",
         "    stat, p_val = ttest_ind(luxury_prices, non_luxury_prices, alternative=\"two-sided\")\n",
@@ -781,22 +803,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "21962c7c-2f30-4cc1-9b96-96ca7a4936be"
+        "outputId": "13a22ddf-33a0-45a9-b05a-b6f325c63e2d"
       },
-      "execution_count": 23,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Shapiro Test (Luxury): ShapiroResult(statistic=np.float64(0.4462474188564798), pvalue=np.float64(1.6348166059663505e-36))\n",
-            "Shapiro Test (Non-Luxury): ShapiroResult(statistic=np.float64(0.038545432752616904), pvalue=np.float64(3.5547798924681874e-44))\n",
+            "Shapiro Test (Luxury): ShapiroResult(statistic=np.float64(0.010594924612544299), pvalue=np.float64(1.33669810864339e-95))\n",
+            "Shapiro Test (Non-Luxury): ShapiroResult(statistic=np.float64(0.024199875438459584), pvalue=np.float64(2.839927052409882e-95))\n",
             "Levene Test: LeveneResult(statistic=np.float64(0.13816970731708678), pvalue=np.float64(0.7101109540524805))\n",
             "\n",
             "Selected Test: Mann–Whitney U Test (two-sided)\n",
             "Test Statistic: 53465981.0000\n",
             "P-Value: 9.449e-18\n",
-            "✅ نتیجه: بین قیمت‌های گروه لاکچری و غیرلاکچری تفاوت معناداری وجود دارد.\n"
+            " نتیجه: بین قیمت‌های گروه لاکچری و غیرلاکچری تفاوت معناداری وجود دارد.\n"
           ]
         }
       ]
